--- a/sourcecode/ts-base/package.json
+++ b/sourcecode/ts-base/package.json
@@ -35,6 +35,7 @@
     "webpack-merge": "^4.2.1"
   },
   "dependencies": {
+    "esbuild": "^0.8.3",
     "jquery": "^3.4.1",
     "moment": "^2.24.0"
   }
